<resources>
    <string name="app_name">IBUGSolution AppSeguros</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="acessar">Acessar</string>
    <string name="proximo">PRÓXIMO</string>
    <string name="string_proximo" />
    <string name="celular_do_cliente">CELULAR DO CLIENTE</string>
    <string name="cpf_do_cliente">CPF DO CLIENTE</string>
    <string name="cpf_do_vendedor">CPF DO VENDEDOR</string>
    <string name="celular_do_vendedor">CELULAR DO VENDEDOR</string>
    <string name="confere_celular_do_cliente">CELULAR DO CLIENTE (REPETIR)</string>
    <string name="cep">CEP</string>
    <string name="numero">NÚMERO</string>
    <string name="dados_do_vendedor">DADOS DO VENDEDOR</string>
    <string name="dados_do_cliente">DADOS DO CLIENTE</string>
    <string name="complemento">COMPLEMENTO</string>
    <string name="produtos_disponiveis">PRODUTOS DISPONÍVEIS</string>
    <string name="itens">ITENS</string>
    <string name="qtd_0">QTD. : 0</string>
    <string name="reais_valor">R$ 0</string>
    <string name="data_de_nascimento">DATA DE NASCIMENTO</string>
    <string name="oferta">Oferta</string>
    <string name="descricao">Descrição</string>
    <string name="preco">Preço</string>
    <string name="placa_numeros"></string>
    <string name="dados_do_veiculo">DADOS DO VEÍCULO</string>
    <string name="placa_letras">YYY</string>
    <string name="placa_do_veiculo">PLACA DO VEÍCULO</string>
    <string name="placa_numero">1234</string>
    <string name="renavam">RENAVAM *SOMENTE PARA VEÍCULOS ZERO KM*</string>
    <string name="campo_renavam">NÚMERO DE 11 DIGITOS</string>
    <string name="campo_chassis">17 CARACTERES</string>
    <string name="chassis">SOMENTE PARA VEÍCULOS 0KM, INFORME O CHASSIS DO VEÍCULO </string>
    <string name="quilometragem">QUILOMETRAGEM</string>
    <string name="campo_veiculo">VEÍCULO COM ATÉ 99900</string>
    <string name="foto_da_quilometragem">FOTO DA QUILOMETRAGEM</string>
    <string name="finalizar_pedido">FINALIZAR PEDIDO</string>
    <string name="servicos_e_seguros">SERVIÇOS E SEGUROS</string>
    <string name="consulta_de_debito">CONSULTA DE DÉBITO</string>
    <string name="prestacao_de_servico">PRESTAÇÃO DE SERVIÇO</string>
    <string name="financiamento">FINANCIAMENTO</string>
    <string name="questionario">QUESTIONÁRIO DE USO</string>
    <string name="pergunta1">1) Veículo é guardado em garagem/estacionamento fechado na residência?</string>
    <string name="pergunta2">2) Veículo é guardado em garagem/estacionamento fechado quando utilizado para na ir a local de trabalho?</string>
    <string name="pergunta3">3) Veículo é guardado em garagem/estacionamento fechado quando utilizado para ir a faculdade/colégio?</string>
    <string name="tipo_de_utilizacao">Tipo de Utilização</string>
    <string name="dados_condutor">DADOS DO PRINCIPAL CONDUTOR</string>
    <string name="cpf_do_condutor">CPF do CONDUTOR</string>
    <string name="data_nascimento_do_condutor">DATA NASCIMENTO DO CONDUTOR</string>
    <string name="cifra">R$</string>
    <string name="btncarro">CARRO</string>
    <string name="btncartao">CARTÃO DE CRÉDITO</string>
    <string name="btnmoto">MOTO</string>
    <string name="subtitulo_valor_veiculo">SOMENTE PARA VEÍCULO 0KM, INFORME O VALOR DO VEÍCULO NA NOTA FISCAL</string>
    <string name="valor_veiculo">VALOR DO VEÍCULO R$ 000.000,00</string>
    <string name="todo">TODO</string>

    <!-- Mensagens de erro -->
    <string name="msg_server_error">Ocorreu um erro inesperado no servidor. Tente novamente mais tarde.</string>
    <string name="msg_invalid_login">Nome de usuário ou senha incorretos. Entre novamente com os dados.</string>
    <string name="msg_error_load_data">Erro ao carregar dados. Tente novamente mais tarde.</string>



</resources>
