<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.85"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/textNomeOferta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/oferta"
            android:textSize="20sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/textDescricaoOferta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/descricao"
        android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cifra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:gravity="start"
                android:text="@string/cifra"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textPrecoOferta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/preco"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_oferta_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_weight="0.1" />

</LinearLayout>