<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <Button
        android:id="@+id/buttonServicosSeguros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@android:color/holo_purple"
        android:onClick="ChamaFormularioComprador"
        android:text="@string/servicos_e_seguros"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonFinanciamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light"
        android:text="@string/financiamento"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@color/cardview_light_background"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />


</LinearLayout>