<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/linear"
    android:padding="0dp">



    <TextView
        android:id="@+id/titulo_lista_ofertas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorProdutosDisponiveis"
        android:gravity="center"
        android:text="@string/produtos_disponiveis"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_finalizado"
        android:onClick="finalizaCompra"
        android:text="@string/finalizar_pedido"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/black"
        android:gravity="center"
        android:orientation="horizontal">

<!--        <TextView-->
<!--            android:id="@+id/titulo_Itens"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="0"-->
<!--            android:padding="8dp"-->
<!--            android:text="@string/itens"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->

        <TextView
            android:id="@+id/textItensQtd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/qtd_0"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

<!--        <TextView-->
<!--            android:id="@+id/textItensTotal"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="0"-->
<!--            android:padding="8dp"-->
<!--            android:text="@string/reais_valor"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleListaOfertas"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>